tests/errors/not_equatable_err/not_equatable_err.c
#error not_equatable_err.not_equatable_err:7:40 Equality is not defined for type: obj
#error not_equatable_err.not_equatable_err:9:36 Equality is not defined for type: unit -> int
#error not_equatable_err.not_equatable_err:13:54 Equality is not defined for type: UnionWithFun
#error not_equatable_err.not_equatable_err:17:48 Equality is not defined for type: GU<int>
#error not_equatable_err.not_equatable_err:23:13 Equality is not defined for type: RecordWithFun
